# senda_argus_hooks

./: .gitignore  README.md  pyproject.toml
browser/: LICENSE  README.md  package.json
browser/examples/: page-agent.html
browser/scripts/: build.mjs
browser/src/: index.js
browser/test/: basic.test.js  fetch.test.js
src/senda_argus_hooks/: register.py
src/senda_argus_hooks/audit/: api.py
src/senda_argus_hooks/cli/: main.py
src/senda_argus_hooks/core/: context.py  hashing.py  identity.py  purpose_registry.py  runtime.py
src/senda_argus_hooks/exporters/: __init__.py  argus.py
src/senda_argus_hooks/instrumentors/: anthropic.py  argus_sdk.py  litellm.py  mcp_python.py  openai.py
src/senda_argus_hooks/integrations/: __init__.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py
src/senda_argus_hooks/sdk/: llm.py  mcp.py  promptops.py
tests/: test_argus_exporter.py  test_argus_sdk_instrumentor_llm_events.py  test_cli.py  test_hashing_embedding_sketch.py  test_langchain_callback_handler_fake.py  test_langgraph_stream_hook_fake.py  test_llamaindex_instrument_rag.py  test_llamaindex_integration_fake.py  test_llm_usage_and_messages_hash_extraction.py  test_openai_agents_integration_fake.py  test_phase2_identity.py  test_promptops_instrumentor_events.py  test_senda_argus_report.py
