[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senda-argus-hooks"
version = "0.4.0"
description = "Hook-only observability SDK for LLM, MCP, Agent, and RAG runtime audit events."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "RainForest / Senda-Argus"}]
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
test = ["pytest>=8", "pyarrow>=14"]
dev = ["pytest>=8", "pyarrow>=14", "ruff>=0.5"]
rag = ["llama-index-core>=0.10"]

[project.scripts]
senda-argus = "senda_argus_hooks.cli.main:main"
senda-hooks = "senda_argus_hooks.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
